tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/sa-east-1/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-de5152b9"
                }
            ],
            "InternetGatewayId": "igw-de0079ba",
            "OwnerId": "167389268608",
            "Tags": []
        }
    ]
}
