tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/sa-east-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-c25b80b8",
                    "NetworkAclId": "acl-ec34308b",
                    "SubnetId": "subnet-115de077"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-c05b80ba",
                    "NetworkAclId": "acl-ec34308b",
                    "SubnetId": "subnet-f1d56eaa"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-c35b80b9",
                    "NetworkAclId": "acl-ec34308b",
                    "SubnetId": "subnet-df5cef96"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-ec34308b",
            "OwnerId": "167389268608",
            "Tags": [],
            "VpcId": "vpc-de5152b9"
        }
    ]
}
